# fedpi

./: .gitignore  Cargo.toml  README.md  clippy.toml  i-cli  run-apps  run-nodes  shumy.upd
core-fpi/: Cargo.toml
core-fpi/src/: core.rs  lib.rs  macros.rs  shares.rs  signatures.rs  ssids.rs  structs.rs
core-fpi/src/crypto/: mod.rs  shares.rs  signatures.rs
core-fpi/src/structs/: authorizations.rs  consents.rs  disclosures.rs  ids.rs  keys.rs  messages.rs  mod.rs  negotiation.rs  records.rs
crypto-fpi/: Cargo.toml
crypto-fpi/src/: lib.rs  signatures.rs
f-node/: Cargo.toml  README.md
f-node/src/: config.rs  databases.rs  db.rs  main.rs  processor.rs  tendermint.rs
f-node/src/handlers/: authorizations.rs  consents.rs  disclosures.rs  keys.rs  mod.rs  queries.rs  subjects.rs
i-client/: Cargo.toml  pedro.toml  shumy.toml
i-client/src/: config.rs  main.rs  manager.rs  storage.rs  store.rs
p-server/: Cargo.toml
t-client/: Cargo.toml
t-client/src/: main.rs
test-net/node0/config/: app.config.toml  config.toml  genesis.json  node_key.json  priv_validator_key.json
test-net/node1/config/: app.config.toml  config.toml  node_key.json  priv_validator_key.json
test-net/node2/config/: app.config.toml  config.toml  node_key.json  priv_validator_key.json
test-net/node3/config/: app.config.toml  config.toml  node_key.json  priv_validator_key.json
