[package]
name = "core-fpi"
version = "0.1.0"
authors = ["shumy <micaelpedrosa@gmail.com>"]
edition = "2018"

[lib]
name = "core_fpi"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
curve25519-dalek = { version = "1", features = ["serde"] }
chrono = "0.4"
bincode = "1.1"
sha2 = "0.8"
bs58 = "0.2"
rand_os = "0.1"
log = "0.4"
clear_on_drop = "0.2"