[package]
name = "f-node"
version = "0.1.0"
authors = ["shumy <micaelpedrosa@gmail.com>"]
edition = "2018"

[dependencies]
core-fpi = { version = "0.1", path = "../core-fpi" }
serde = { version = "1.0", features = ["derive"] }
clap = "2.33"
abci = "0.6"
bs58 = "0.2"
sha2 = "0.8"
log = "0.4"
env_logger = "0.6"
toml = "0.5"
clear_on_drop = "0.2"