[package]
name = "i-client"
version = "0.1.0"
authors = ["shumy <micaelpedrosa@gmail.com>"]
edition = "2018"

[dependencies]
core-fpi = { version = "0.1", path = "../core-fpi" }
serde = { version = "1.0", features = ["derive"] }
bincode = "1.1"
clap = "2.33"
reqwest = "0.9"
bs58 = "0.2"
base64 = "0.10"
sha2 = "0.8"
log = "0.4"
toml = "0.5"
rand = "0.7"
clear_on_drop = "0.2"